# mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh  server.json  test-docker.sh  validate-docker.sh
.github/workflows/: ci.yml  publish-mcp.yml
src/: chroma_service.py  config.py  embeddings.py  ghost_client.py  http_middleware.py  indexer.py  main.py  mcp_server.py  models.py
tests/: conftest.py  test_api.py  test_chunking.py  test_embeddings.py  test_main.py  test_mcp_tools.py
